Fix Google Plus link

--- a/_config.yml
+++ b/_config.yml
@@ -67,7 +67,7 @@ author:
   home: https://www.chaitanyapramod.com/
   facebook: ChaitanyaPramod
   github: ChaitanyaPramod
-  google_plus: ChaitanyaPramod
+  google_plus: +ChaitanyaPramod
   linkedin: ChaitanyaPramod
   twitter: ChaitanyaPramod
 
