Change domain - Add missed changes

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: blog.chaitanyapramod.com
+title: Chaitanya Pramod
 name: Chaitanya Pramod
 email: iam@chaitanyapramod.com
 description: >- # this means to ignore newlines until "baseurl:"
