Add profile pic

--- a/_config.yml
+++ b/_config.yml
@@ -68,6 +68,7 @@ analytics:
 
 author:
   name: Chaitanya Pramod
+  avatar: /assets/images/profile.jpg
   bio: Software Tech Lead with wide experience across tech stacks
   location: "Bangalore, India"
   email: iam@chaitanyapramod.com
